Web Inspector: [Timeline] File selector control becomes visible on "tab" navigation. https://bugs.webkit.org/show_bug.cgi?id=111710
Reviewed by Pavel Feldman.

Solution: Exclude file selector control from tab-navigation flow.

* inspector/front-end/FileUtils.js: Set tab-index to control.
* inspector/front-end/TimelinePanel.js: Remove duplicating code.
* inspector/front-end/inspector.css:
(.status-bar-item): Make scroll height equal to offset height.


Canonical link: https://commits.webkit.org/130429@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145496 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/inspector/front-end/inspector.css
+++ b/Source/WebCore/inspector/front-end/inspector.css
@@ -624,7 +624,7 @@ body.drawer-visible #main-panels {
     display: inline-block;
     pointer-events: auto;
     cursor: default;
-    height: 24px;
+    height: 22px;
     padding: 0;
     margin-left: -1px;
     margin-right: 0;
@@ -769,7 +769,6 @@ select.status-bar-item {
     margin-right: -15px;
     position: relative;
     top: -1px;
-    height: 23px;
 }
 
 select.status-bar-item, select.status-bar-item:hover {
